Fix container overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -43,8 +43,9 @@ body {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  overflow-x: auto;
-  margin-top: 62px;
+  overflow: auto;
+  margin-top: 60px;
+  padding-top: 2px;
   height: calc(100vh - 62px);
 }
 
